# MatzoMate

./: .env  .gitignore  .replit  aisearch.py  amazonsearch.py  amazonsearch2.py  database.db  database.py  internetsearch.py  main.py  offsearch.py  pyproject.toml  replit.md  run.py
templates/: index.html
